modules/gdscript/tests/scripts/runtime/errors/non_static_method_call_on_native_class.gd
# https://github.com/godotengine/godot/issues/66675
func test():
	example(Node2D)

func example(thing):
	print(thing.has_method('asdf'))
